# Separating-Axis-Theorem

./: .gitignore  CMakeLists.txt  Intersect.h  README.md  main.cpp
include/: Intersect.h
